Do PEP8 check during test

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [aliases]
 test=pytest
 [tool:pytest]
+addopts = --doctest-modules --flake8
 norecursedirs = result build tmp* .eggs
 [yapf]
 based_on_style = pep8
